# netvizGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Point.cpp  Point.h  README.md  cmake_install.cmake  main.cpp  netvizGL  point.cpp  point.h  shader.h  window.cpp  window.h
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  netvizGL  netvizGL.cbp
Graphs/: Diagram.cs  Multilevek.txt  Vector.cs  adjacencymatrix.txt
Graphs/Adjacency/: deletedAdj  sirpenski5.txt  test
Graphs/EdgeLinks/: MultiLevelTest.edg  WilsGraph  ash85.txt  betweenness.txt  edge-links.txt  edge-links2.txt  graph.txt  rw5151.txt  smallertest.txt  test.txt  testCentrality
Graphs/Matrix Market/fxm3_6/: fxm3_6.mtx  fxm3_6_b.mtx  fxm3_6_c.mtx  fxm3_6_hi.mtx  fxm3_6_lo.mtx
Graphs/MatrixMarket/dwt_918/: dwt_918.mtx
Graphs/Youtubestuff/: DrawGraph.java  Edge.java  Node.java  Sort.java  Vector.java
code examples/: GA.txt  MultiLevel.cpp  MultiLevel.h  MultiLevel.txt  Multilevek.txt  force.txt  mult.txt
inc/: ButtonWidget.h  Edge.h  FileReader.h  GLWindow.h  Graph.h  Line.h  Menu.h  Point.h  Renderable.h  Shader.h  SimpleForceDirected.h  SimpleSvg.h  SimpleSvg.hpp  SvgPrinter.h  Vertex.h  Widget.h  Window.h  line.h
inc/Algorithms/: Algorithm.h  FruchtermanReingold.h  MultiForce.h  MultiLevel.h  SFDAdapter.h  SimpleForceDirected.h
inc/Centrality/: Betweenness.h  Centrality.h  DegreeCentrality.h  DistanceCentrality.h
inc/Command/: ColourNode.h  ColourNodeCommand.h  Command.h  DeleteEdge.h  DeleteNode.h  DeleteVertex.h  DragNode.h  DragVertex.h  LoadGraph.h  LoadGraphCommand.h  NameByIndex.h  RefreshGraph.h  RefreshGraphCommand.h  SaveGraph.h  SelectEdge.h  SelectVertex.h  TextNode.h  TextNodeCommand.h  UpdateGraph.h
inc/Graphs/: AdjacencyGraph.h  EdgeGraph.h  Graph.h  MatrixMarketGraph.h  mmio.h
libs/: CMakeLists.txt
libs/glfw-3.2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
libs/glfw-3.2.1/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
libs/glfw-3.2.1/src/: Makefile  cmake_install.cmake
libs/glfw-3.2.1/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
shaders/: default.frag  default.vert
src/: ButtonWidget.cpp  Edge.cpp  FileReader.cpp  GLWindow.cpp  Graph.cpp  Line.cpp  Menu.cpp  Point.cpp  Shader.cpp  SimpleForceDirected.cpp  Vertex.cpp  Widget.cpp  Window.cpp  line.cpp  main.cpp
src/Algorithms/: FruchtermanReingold.cpp  MultiForce.cpp  MultiLevel.cpp  SimpleForceDirected.cpp
src/Centrality/: Betweenness.cpp  DegreeCentrality.cpp  DistanceCentrality.cpp
src/Command/: ColourNodeCommand.cpp  LoadGraphCommand.cpp  RefreshGraphCommand.cpp  TextNodeCommand.cpp
src/Graphs/: AdjacencyGraph.cpp  EdgeGraph.cpp  Graph.cpp  MatrixMarketGraph.cpp  mmio.c
